# hs_app

./: BUILDING.md  Cargo.toml  LICENSE  Readme.md
hs_crawler/: Cargo.toml
hs_crawler/src/: lib.rs  util.rs
hs_crawler/src/crawler/: canteen_plan.rs  mod.rs  timetable.rs
src/: main.rs  testing.rs  util.rs
src/data_source/: canteen_plan.rs  mod.rs  timetable.rs  weather.rs
src/tui/: keys.rs  mod.rs  termutil.rs  vterm.rs
src/tui/vterm/: mod.rs  vbackground.rs  vbox.rs  vcenter.rs  vgrid.rs  vmargin.rs  vmax.rs  vspacer.rs  vterm.rs  vtext.rs
src/ui/: cache.rs  json.rs  keys.rs  mod.rs  termutil.rs  theme.rs  vterm.rs
