[package]
name = "hs_app"
version = "0.2.0-dirty"
authors = ["CodeSteak <codesteak@shellf.art>"]

[dependencies]
chrono = "0.4"
unicode-segmentation = "1.1.0"
nix = "0.11.0"
signal = "0.6.0"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
hs_crawler = {path = "hs_crawler"}

[profile.release]
lto = true
