[package]
name = "hs_app"
version = "1.0.0"
authors = ["CodeSteak <codesteak@shellf.art>"]

[dependencies]
clap = "2.32.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-segmentation = "1.1.0"
nix = "0.11.0"
serde = "1.0.79"
serde_json = "1.0.32"
serde_derive = "1.0.79"
hs_crawler = {path = "hs_crawler"}
dirs = "1.0.4"

[profile.release]
lto = true
